--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=inventory-manager
 server.port=3000
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/inventorytest
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/inventory_system
+spring.datasource.username=developer
+spring.datasource.password=postgres
